--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -1,24 +1,25 @@
 name: qzx-mac-beta
 on: 
   workflow_dispatch:
+
 jobs:
   build:
     name: qzx-mac
     runs-on: macos-latest
-    
-    steps:                 
-    - name: Enabling Remote Access
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-      run: |
-          curl -s -o start.sh -L "https://raw.githubusercontent.com/JohnnyNetsec/github-vm/main/mac/start.sh"
+
+    env:
+      NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+
+    steps:
+      - name: Reponun içeriğini al
+        uses: actions/checkout@v4
+
+      - name: VNC + ngrok başlat
+        run: |
           chmod +x start.sh
-          bash start.sh "$NGROK_AUTH_TOKEN"
-          
-    - name: Log In Details To VNC Server
-      run: |
-         chmod +x login.sh
-         bash login.sh
-         
-    - name: MacOS System running...
-      uses: mxschmitt/action-tmate@v2
+          ./start.sh "$NGROK_AUTH_TOKEN"
+
+      - name: ngrok bağlantı adresini göster
+        run: |
+          sleep 5
+          curl -s http://127.0.0.1:4040/api/tunnels
