--- a/.github/workflows/Mac.yml
+++ b/.github/workflows/Mac.yml
@@ -1,42 +1,24 @@
-name: qzx-mac-beta
+name: MacRDP
 on: 
   workflow_dispatch:
-
 jobs:
   build:
-    name: qzx-mac
+    name: MacRDP
     runs-on: macos-latest
-
-    env:
-      NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
-    steps:
-      # Reponun içeriğini al (opsiyonel, login.sh gibi dosyalar varsa gerek)
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
-      # start.sh scriptini internetten indir ve çalıştır
-      - name: Download and run start.sh
-        run: |
+    
+    steps:                 
+    - name: Enabling Remote Access
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+      run: |
           curl -s -o start.sh -L "https://raw.githubusercontent.com/JohnnyNetsec/github-vm/main/mac/start.sh"
           chmod +x start.sh
           bash start.sh "$NGROK_AUTH_TOKEN"
-
-      # (Opsiyonel) login.sh varsa bunu da çalıştır
-      - name: Log in to VNC server (optional)
-        run: |
-          if [ -f login.sh ]; then
-            chmod +x login.sh
-            bash login.sh
-          fi
-
-      # ngrok tünel adresini loglarda göster
-      - name: Show ngrok tunnel URL
-        run: |
-          sleep 5
-          curl -s http://127.0.0.1:4040/api/tunnels
-
-      - name: sleep for work
-        run: |
-          sleep 21600
           
+    - name: Log In Details To VNC Server
+      run: |
+         chmod +x login.sh
+         bash login.sh
+         
+    - name: MacOS System running...
+      uses: mxschmitt/action-tmate@v2
